added basic structure

--- a/Mentoring-App/Mentoring-App/Pages/Students.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Students.xaml
@@ -7,6 +7,39 @@
       mc:Ignorable="d" 
       d:DesignHeight="675" d:DesignWidth="1200" Background="White"
       Title="Students">
+    <StackPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="_File">
+                <MenuItem Header="Schüler" />
+                <MenuItem Header="Information" />
+                <Separator />
+                <MenuItem Header="Beenden" />
+            </MenuItem>
+        </Menu>
+        <StackPanel Orientation="Horizontal" Height="675">
+            <StackPanel Orientation="Vertical" Width="600">
+                <TextBlock Margin="15,10,0,0">nach Fach suchen:</TextBlock>
+                <TextBox x:Name="subjectSearch" Margin="20,0,20,0"/>
 
-    
+                <ListBox x:Name="subjects" Margin="20,30,20,0" Height="120">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+
+                <Label Margin="20,80,0,0">Termine</Label>
+                <ListBox x:Name="appointments" Margin="20,10,20,0" Height="200">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding}"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+
+                <Button Height="30" Margin="100,40,100,0">Termin buchen</Button>
+            </StackPanel>
+        </StackPanel>
+    </StackPanel>
 </Page>
