--- a/Mentoring-App/Mentoring-App/Pages/Login.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Login.xaml
@@ -7,8 +7,62 @@
       mc:Ignorable="d" 
       d:DesignHeight="675" d:DesignWidth="400" Background="White"
       Title="Login">
-
-    <StackPanel>
-        <TextBlock>LOGIN</TextBlock>
+    <Page.Resources>
+        <Style x:Key="Title" TargetType="TextBlock">
+            <Setter Property="FontFamily" Value="Arial"/>
+            <Setter Property="FontSize" Value="90"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="18" />
+            <Setter Property="FontFamily" Value="Calibri Light"/>
+            <Setter Property="Height" Value="30"/>
+        </Style>
+        <Style TargetType="PasswordBox">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="VerticalContentAlignment" Value="Center" />
+            <Setter Property="HorizontalContentAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="18" />
+            <Setter Property="FontFamily" Value="Calibri Light"/>
+            <Setter Property="Height" Value="30"/>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontFamily" Value="Calibri Light"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="0,2,0,0"></Setter>
+        </Style>
+        <Style x:Key="Text" TargetType="TextBlock">
+            <Setter Property="FontSize" Value="20" />
+            <Setter Property="FontFamily" Value="Calibri Light"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="0,2,0,0"></Setter>
+            <Setter Property="Margin" Value="0,200,0,10"></Setter>
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontFamily" Value="Calibri Light"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Margin" Value="0,10,0,0"></Setter>
+        </Style>
+    </Page.Resources>
+    <StackPanel Margin="20">
+        <TextBlock Style="{StaticResource Title}">LOGIN</TextBlock>
+        <DockPanel Margin="0,40,0,0">
+            <TextBlock Width="120" Height="30">Benutzername</TextBlock>
+            <TextBox></TextBox>
+        </DockPanel>
+        <DockPanel Margin="0,10">
+            <TextBlock Width="120" Height="30">Passwort</TextBlock>
+            <PasswordBox></PasswordBox>
+        </DockPanel>
+        <Button>Anmelden</Button>
+        <TextBlock Style="{StaticResource Text}">Ich habe noch kein Konto</TextBlock>
+        <Button>Registrieren</Button>
     </StackPanel>
 </Page>
