--- a/Mentoring-App/Mentoring-App/Pages/Mentor.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Mentor.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Mentoring_App.Pages.Students"
+﻿<Page x:Class="Mentoring_App.Pages.Mentor"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,8 @@
       xmlns:local="clr-namespace:Mentoring_App.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="675" d:DesignWidth="1200" Background="White"
-      Title="Students">
+      Title="Mentor">
+
     <Page.Resources>
         <Style TargetType="TextBlock">
             <Setter Property="FontFamily" Value="Calibri"/>
@@ -24,10 +25,9 @@
         </Menu>
         <StackPanel Orientation="Horizontal" Height="675">
             <StackPanel Orientation="Vertical" Width="560">
-                <TextBlock Margin="20,10,0,0">nach Fach suchen:</TextBlock>
-                <TextBox x:Name="subjectSearch" Margin="20,0,20,0"/>
+                <TextBlock Margin="20,10,0,0">Meine Fächer</TextBlock>
 
-                <ListBox x:Name="subjects" Margin="20,30,20,0" Height="120">
+                <ListBox x:Name="subjects" Margin="20,10,20,0" Height="120">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding}"/>
@@ -35,7 +35,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <TextBlock Margin="20,80,0,0">Termine</TextBlock>
+                <TextBlock Margin="20,80,0,0">Termine erstellen</TextBlock>
                 <ListBox x:Name="appointments" Margin="20,10,20,0" Height="200">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -44,7 +44,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <Button Height="30" Margin="100,40,100,0">Termin buchen</Button>
+                <Button Height="30" Margin="100,40,100,0">Termin hinzufügen</Button>
             </StackPanel>
             <StackPanel Orientation="Vertical" Width="400" Margin="100,0,0,0">
                 <TextBlock Margin="20,10,0,0">Meine Termine</TextBlock>
@@ -56,7 +56,8 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <Button Height="30" Margin="20,20,20,0">Termin entfernen</Button>
+                <Button Height="30" Margin="20,20,20,0">Termin bestätigen</Button>
+                <Button Height="30" Margin="20,20,20,0">Termin ablehnen</Button>
             </StackPanel>
         </StackPanel>
     </StackPanel>
