--- a/Mentoring-App/Mentoring-App/App.xaml
+++ b/Mentoring-App/Mentoring-App/App.xaml
@@ -4,6 +4,14 @@
              xmlns:local="clr-namespace:Mentoring_App"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="BlueOcean">
+                <Setter Property="TextElement.FontFamily" Value="/Fonts/#Blue Ocean"/>
+            </Style>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
