--- a/Mentoring-App/Mentoring-App/Pages/Login.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Login.xaml
@@ -4,65 +4,22 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Mentoring_App.Pages"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="675" d:DesignWidth="400" Background="White"
       Title="Login">
-    <Page.Resources>
-        <Style x:Key="Title" TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="Arial"/>
-            <Setter Property="FontSize" Value="90"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-        </Style>
-        <Style TargetType="TextBox">
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="FontSize" Value="18" />
-            <Setter Property="FontFamily" Value="Calibri Light"/>
-            <Setter Property="Height" Value="30"/>
-        </Style>
-        <Style TargetType="PasswordBox">
-            <Setter Property="VerticalAlignment" Value="Center" />
-            <Setter Property="VerticalContentAlignment" Value="Center" />
-            <Setter Property="HorizontalContentAlignment" Value="Center" />
-            <Setter Property="FontSize" Value="18" />
-            <Setter Property="FontFamily" Value="Calibri Light"/>
-            <Setter Property="Height" Value="30"/>
-        </Style>
-        <Style TargetType="TextBlock">
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="FontFamily" Value="Calibri Light"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="0,2,0,0"></Setter>
-        </Style>
-        <Style x:Key="Text" TargetType="TextBlock">
-            <Setter Property="FontSize" Value="20" />
-            <Setter Property="FontFamily" Value="Calibri Light"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="Padding" Value="0,2,0,0"></Setter>
-            <Setter Property="Margin" Value="0,200,0,10"></Setter>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="Width" Value="200"/>
-            <Setter Property="Height" Value="35"/>
-            <Setter Property="FontFamily" Value="Calibri Light"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Margin" Value="0,10,0,0"></Setter>
-        </Style>
-    </Page.Resources>
     <StackPanel Margin="20">
-        <TextBlock Style="{StaticResource Title}">LOGIN</TextBlock>
+        <TextBlock HorizontalAlignment="Center" FontSize="60" Style="{StaticResource BlueOcean}">LOGIN</TextBlock>
         <DockPanel Margin="0,40,0,0">
-            <TextBlock Width="120" Height="30">Benutzername</TextBlock>
-            <TextBox></TextBox>
+            <materialDesign:PackIcon Kind="User" Height="30" Width="30" Foreground="Gray"/>
+            <TextBox VerticalContentAlignment="Center" materialDesign:HintAssist.Hint="Enter Email" BorderBrush="red" CaretBrush="blue" SelectionBrush="Green"></TextBox>
         </DockPanel>
         <DockPanel Margin="0,10">
-            <TextBlock Width="120" Height="30">Passwort</TextBlock>
-            <PasswordBox></PasswordBox>
+            <materialDesign:PackIcon Kind="Password" Height="30" Width="30" Foreground="Gray"/>
+            <PasswordBox materialDesign:HintAssist.Hint="Enter Password" BorderBrush="red" CaretBrush="blue" SelectionBrush="Green"></PasswordBox>
         </DockPanel>
-        <Button>Anmelden</Button>
-        <TextBlock Style="{StaticResource Text}">Ich habe noch kein Konto</TextBlock>
+        <Button Style="{StaticResource MaterialDesignRaisedButton}" materialDesign:ButtonAssist.CornerRadius="10" Width="100" Height="50">Login</Button>
+        <TextBlock>Ich habe noch kein Konto</TextBlock>
         <Button>Registrieren</Button>
     </StackPanel>
 </Page>
