--- a/Mentoring-App/Mentoring-App/Pages/Login.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Login.xaml
@@ -6,20 +6,26 @@
       xmlns:local="clr-namespace:Mentoring_App.Pages"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
-      d:DesignHeight="675" d:DesignWidth="400" Background="White"
+      d:DesignHeight="675" d:DesignWidth="400" Background="#F4F6F4"
       Title="Login">
-    <StackPanel Margin="20">
-        <TextBlock HorizontalAlignment="Center" FontSize="60" Style="{StaticResource BlueOcean}">LOGIN</TextBlock>
-        <DockPanel Margin="0,40,0,0">
-            <materialDesign:PackIcon Kind="User" Height="30" Width="30" Foreground="Gray"/>
-            <TextBox VerticalContentAlignment="Center" materialDesign:HintAssist.Hint="Enter Email" BorderBrush="red" CaretBrush="blue" SelectionBrush="Green"></TextBox>
-        </DockPanel>
-        <DockPanel Margin="0,10">
-            <materialDesign:PackIcon Kind="Password" Height="30" Width="30" Foreground="Gray"/>
-            <PasswordBox materialDesign:HintAssist.Hint="Enter Password" BorderBrush="red" CaretBrush="blue" SelectionBrush="Green"></PasswordBox>
-        </DockPanel>
-        <Button Style="{StaticResource MaterialDesignRaisedButton}" materialDesign:ButtonAssist.CornerRadius="10" Width="100" Height="50">Login</Button>
-        <TextBlock>Ich habe noch kein Konto</TextBlock>
-        <Button>Registrieren</Button>
+    <StackPanel>
+        <StackPanel Margin="20">
+            <TextBlock Foreground="#555555" Margin="0,40,0,0" HorizontalAlignment="Center" FontSize="80" FontFamily="Arial">LOGIN</TextBlock>
+            <DockPanel Margin="0,40,0,0">
+                <materialDesign:PackIcon Kind="User" Height="30" Width="30" Foreground="#555555"/>
+                <TextBox Margin="10,0,0,0" VerticalContentAlignment="Center" materialDesign:HintAssist.Hint="Enter Email" BorderBrush="#555555" CaretBrush="#555555" SelectionBrush="#555555"></TextBox>
+            </DockPanel>
+            <DockPanel Margin="0,10">
+                <materialDesign:PackIcon Kind="Password" Height="30" Width="30" Foreground="#555555"/>
+                <PasswordBox Margin="10,0,0,0" materialDesign:HintAssist.Hint="Enter Password" BorderBrush="#555555" CaretBrush="#555555" SelectionBrush="#555555"></PasswordBox>
+            </DockPanel>
+            <Button Style="{StaticResource MaterialDesignRaisedButton}" materialDesign:ButtonAssist.CornerRadius="10" Background="#1867A0" Foreground="#F4F6F4" Width="120" Height="30" Margin="10">Login</Button>
+        </StackPanel>
+        <Border Background="#212121" Margin="0,100,0,0" HorizontalAlignment="Center" Height="300" Width="700" CornerRadius="500">
+            <StackPanel>
+                <TextBlock Foreground="#F4F6F4" VerticalAlignment="Bottom" Margin="0,80,0,0" HorizontalAlignment="Center">Ich habe noch kein Konto</TextBlock>
+                <Button Style="{StaticResource MaterialDesignRaisedButton}" materialDesign:ButtonAssist.CornerRadius="10" Background="#F4F6F4" Foreground="#555555" Width="120" Height="30" Margin="10">Registrieren</Button>
+            </StackPanel>
+        </Border>
     </StackPanel>
 </Page>
