--- a/Mentoring-App/Mentoring-App/Pages/Login.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Login.xaml
@@ -54,14 +54,14 @@
     <StackPanel Margin="20">
         <TextBlock Style="{StaticResource Title}">LOGIN</TextBlock>
         <DockPanel Margin="0,40,0,0">
-            <TextBlock Width="120" Height="30">Benutzername</TextBlock>
-            <TextBox></TextBox>
+            <TextBlock Width="120" Height="30">E-Mail</TextBlock>
+            <TextBox x:Name="email_input"/>
         </DockPanel>
         <DockPanel Margin="0,10">
             <TextBlock Width="120" Height="30">Passwort</TextBlock>
-            <PasswordBox></PasswordBox>
+            <PasswordBox x:Name="password_input"/>
         </DockPanel>
-        <Button>Anmelden</Button>
+        <Button Click="Button_Click">Anmelden</Button>
         <TextBlock Style="{StaticResource Text}">Ich habe noch kein Konto</TextBlock>
         <Button>Registrieren</Button>
     </StackPanel>
