removed bindings from ListBoxes

--- a/Mentoring-App/Mentoring-App/Pages/Students.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Students.xaml
@@ -28,35 +28,20 @@
                 <TextBox x:Name="subjectSearch" Margin="20,0,20,0" TextChanged="subjectSearch_TextChanged"/>
 
                 <ListBox x:Name="subjects_LstBx" Margin="20,30,20,0" Height="120" SelectionChanged="subjects_SelectionChanged">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
                 </ListBox>
 
                 <TextBlock Margin="20,80,0,0">Termine</TextBlock>
                 <ListBox x:Name="appointments_LstBx" Margin="20,10,20,0" Height="200">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
                 </ListBox>
 
                 <Button Height="30" Margin="100,40,100,0">Termin buchen</Button>
             </StackPanel>
             <StackPanel Orientation="Vertical" Width="400" Margin="100,0,0,0">
                 <TextBlock Margin="20,10,0,0">Meine Termine</TextBlock>
-                <ListBox x:Name="myAppointments" Margin="20,10,20,0" Height="400">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
+                <ListBox x:Name="myAppointments_LstBx" Margin="20,10,20,0" Height="400">
                 </ListBox>
 
-                <Button Height="30" Margin="20,20,20,0">Termin entfernen</Button>
+                <Button x:Name="removeAppointment_Btn" Height="30" Margin="20,20,20,0" Click="removeAppointment_Btn_Click">Termin entfernen</Button>
             </StackPanel>
         </StackPanel>
     </StackPanel>
