--- a/Mentoring-App/Mentoring-App/Pages/registration.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/registration.xaml
@@ -5,8 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Mentoring_App.Pages"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="registration" Background="White">
+      Title="registration" Background="White" Width="1200" Height="675">
     <Page.Resources>
         <Style TargetType="TextBox">
             <Setter Property="VerticalContentAlignment" Value="Center"/>
