--- a/Mentoring-App/Mentoring-App/Pages/registration.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/registration.xaml
@@ -69,7 +69,7 @@
         <StackPanel>
             <StackPanel Orientation="Horizontal">
                 <Label>Registrieren als</Label>
-                <ComboBox>
+                <ComboBox x:Name="StudentOrMentor">
                     <ComboBoxItem Selector.IsSelected="True">Schüler</ComboBoxItem>
                     <ComboBoxItem>Mentor</ComboBoxItem>
                 </ComboBox>
