--- a/Mentoring-App/Mentoring-App/Pages/mentorreg.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/mentorreg.xaml
@@ -33,7 +33,7 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10">
             <Label FontFamily="CalibriLight" FontSize="20">Jahrgang auswählen:</Label>
-            <ComboBox FontFamily="CalibriLight" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="150">
+            <ComboBox x:Name="grade" FontFamily="CalibriLight" FontSize="20" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Width="150">
                 <ComboBoxItem IsSelected="True">1. Jahrgang</ComboBoxItem>
                 <ComboBoxItem>2. Jahrgang</ComboBoxItem>
                 <ComboBoxItem>3. Jahrgang</ComboBoxItem>
