--- a/Mentoring-App/Mentoring-App/Pages/Students.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Students.xaml
@@ -15,7 +15,7 @@
     </Page.Resources>
     <StackPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem Header="Menü">
+            <MenuItem x:Name="mainmenu" Header="Menü">
                 <MenuItem Header="Schüler" />
                 <MenuItem Header="Information" />
                 <Separator />
