--- a/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
@@ -64,8 +64,8 @@
              </StackPanel>
             <Border BorderBrush="LightGray" BorderThickness="1" Margin="50,20,0,70"/>
             <StackPanel Orientation="Vertical" Width="400" Margin="100,0,0,0">
-                <TextBlock Margin="20,10,0,0">Meine Termine</TextBlock>
-                <ListBox x:Name="myAppointments" Margin="20,10,20,0" Height="400"/>
+                <TextBlock Margin="0,10,0,0">Meine Termine</TextBlock>
+                <ListBox x:Name="myAppointments" Margin="0,10,0,0" Height="400" Width="400"/>
                 <Button Height="30" Margin="20,20,20,0">Termin bestätigen</Button>
                 <Button Height="30" Margin="20,20,20,0">Termin ablehnen</Button>
              </StackPanel>
