--- a/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
@@ -66,8 +66,8 @@
             <StackPanel Orientation="Vertical" Width="400" Margin="100,0,0,0">
                 <TextBlock Margin="0,10,0,0">Meine Termine</TextBlock>
                 <ListBox x:Name="myAppointments" Margin="0,10,0,0" Height="400" Width="400"/>
-                <Button Height="30" Margin="20,20,20,0">Termin bestätigen</Button>
-                <Button Height="30" Margin="20,20,20,0">Termin ablehnen</Button>
+                <Button Height="30" Margin="20,20,20,0" Click="AcceptAppointment_Click">Termin bestätigen</Button>
+                <Button Height="30" Margin="20,20,20,0" Click="DeclineAppointment_Click">Termin ablehnen</Button>
              </StackPanel>
         </StackPanel>
     </StackPanel>
