--- a/Mentoring-App/Mentoring-App/Pages/Admin.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/Admin.xaml
@@ -36,7 +36,7 @@
                 <MenuItem Header="_Admin" />
                 <MenuItem Header="_Information" />
                 <Separator />
-                <MenuItem Header="_Beenden" />
+                <MenuItem Header="_Beenden" Click="Shutdown_Click" />
             </MenuItem>
         </Menu>
         <StackPanel Width="600">
