--- a/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
@@ -19,7 +19,7 @@
                 <MenuItem Header="Schüler" />
                 <MenuItem Header="Information" />
                 <Separator />
-                <MenuItem Header="Beenden" />
+                <MenuItem Header="Beenden" Click="Shutdown_Click"  />
             </MenuItem>
         </Menu>
         <StackPanel x:Name="Site" Orientation="Horizontal" Height="675" Loaded="LoadComboboxes">
