--- a/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
+++ b/Mentoring-App/Mentoring-App/Pages/MentorPage.xaml
@@ -16,23 +16,17 @@
     <StackPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Menü">
-                <MenuItem Header="Schüler" />
-                <MenuItem Header="Information" />
+                <MenuItem Header="Schüler" Click="ChangeToStudentPage_Click"/>
+                <MenuItem Header="Information" Click="Information_Click"/>
                 <Separator />
-                <MenuItem Header="Beenden" Click="Shutdown_Click"  />
+                <MenuItem Header="Beenden" Click="Shutdown_Click"/>
             </MenuItem>
         </Menu>
         <StackPanel x:Name="Site" Orientation="Horizontal" Height="675" Loaded="LoadComboboxes">
              <StackPanel Orientation="Vertical" Width="560">
                 <TextBlock Margin="20,10,0,0">Meine Fächer</TextBlock>
 
-                <ListBox x:Name="subjects" Margin="20,10,20,0" Height="120">
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding}"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-                </ListBox>
+                <ListBox x:Name="subjects" Margin="20,10,20,0" Height="120"></ListBox>
                 
                 <StackPanel Orientation="Horizontal" Height="100">
                     <ComboBox x:Name="subjectComboBox" Margin="20,10,0,0" Height="30" Width="250"></ComboBox>
